[package]
name = "spright"
version = "0.7.0"
edition = "2021"
description = "Simple sprite renderer for wgpu"
license = "LGPL-3.0-or-later"

[dependencies]
wgpu = "22.1.0"
image = { version = "0.25.2", default-features = false }
bytemuck = { version = "1.16", features = ["derive"] }
rgb = "0.8.50"

[dev-dependencies]
winit = "0.30"
pollster = "0.3.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
